# stm32-rust

./: Cargo.toml  memory.x
.cargo/: config.toml
blink-led/src/: main.rs
